Fix layout issues.

--- a/progressview/src/stylesheets/dropdown.css
+++ b/progressview/src/stylesheets/dropdown.css
@@ -1,6 +1,7 @@
 
 .dropdown-menu {
-  margin: 0 2vw;
+  display: contents;
+  margin: 0 2em;
 }
 
 .dropdown {
@@ -9,12 +10,15 @@
 }
 
 .dropdown-title-button {
-  border: none;
+  border: 1px solid lightgrey;
+  border-radius: 0.25em;
+  fill: white;
   font-family: inherit;
   font-size: unset;
   min-width: 10em;
   padding: 10px;
   height: 3em;
+  margin: 1em auto;
 }
 
 .dropdown-options {
@@ -23,6 +27,7 @@
   min-width: 10em;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  background-color: white;
 }
 
 .dropdown-options button {
